plugins {
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
}

group = 'com.tonkar'
version = '4.0'
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    def jwt_version = '4.4.0'
    def lombok_version = '1.18.34'
    def jsoup_version =  '1.18.1'
    def ehcache_version = '3.10.8'
    def poi_xml_version = '5.3.0'
    def commons_lang3_version = '3.17.0'
    def testcontainers_version = '1.20.2'
    def faker_version = '2.4.0'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude module: "spring-boot-starter-tomcat"
    }
    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation group: 'org.jsoup', name: 'jsoup', version: jsoup_version
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: commons_lang3_version
    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation group: 'com.auth0', name: 'java-jwt', version: jwt_version
    // Caching
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation group: 'org.ehcache', name: 'ehcache', version: ehcache_version
    // Excel
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: poi_xml_version
    // Lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: lombok_version
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombok_version
    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation group: 'org.testcontainers', name: 'testcontainers', version: testcontainers_version
    testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: testcontainers_version
    testImplementation group: 'org.testcontainers', name: 'mongodb', version: testcontainers_version
    testImplementation group: 'net.datafaker', name: 'datafaker', version: faker_version
}

test {
    useJUnitPlatform()
}
